Change outline button background from transparent to white

--- a/fullstack/FE/src/styles/_mixins.scss
+++ b/fullstack/FE/src/styles/_mixins.scss
@@ -173,7 +173,7 @@
 
 @mixin button-outline {
   @include button-base;
-  background-color: transparent;
+  background-color: $color-white;
   color: $color-gray-800;
   border: 1px solid $color-gray-300;
   font-weight: 500;
