--- a/fullstack/FE/src/styles/_mixins.scss
+++ b/fullstack/FE/src/styles/_mixins.scss
@@ -174,13 +174,14 @@
 @mixin button-outline {
   @include button-base;
   background-color: $color-white;
-  color: $color-gray-800;
+  color: $color-gray-900;
   border: 1px solid $color-gray-300;
   font-weight: 500;
 
   &:hover:not(:disabled) {
     background-color: $color-gray-50;
     border-color: $color-gray-400;
+    color: $color-black;
   }
 }
 
